--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,6 @@
-<router-outlet> </router-outlet>
+<ngx-particles
+  [id]="'tsparticles'"
+  [options]="particlesOptions"
+  style="position: fixed; width: 100%; height: 100%; z-index: -1;"
+></ngx-particles>
+  <router-outlet></router-outlet>
