--- a/src/app/main/home/home.css
+++ b/src/app/main/home/home.css
@@ -88,3 +88,12 @@
     align-items: center;
   }
 }
+
+#tsparticles {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
