--- a/src/app/main/home/home.html
+++ b/src/app/main/home/home.html
@@ -1,5 +1,3 @@
-<!-- Moving particles background -->
-<div id="tsparticles" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:-1;"></div>
 
 <div class="profile-section">
   <img src="logo.png" alt="Profile" class="profile-img" />
@@ -8,11 +6,8 @@
     <h2 class="profile-title">
       <span class="typewriter">Full Stack Developer</span>
     </h2>
-    <div class="social-icons">
-      <a href="https://github.com/WardaAsad23" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/warda-asad/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-    </div>
+    <p class="profile-description">
+      Passionate about building scalable web applications and working with modern technologies.
+    </p>
   </div>
 </div>
-<!-- Add tsParticles script in your main index.html or via npm for Angular integration -->
