--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <ngx-particles
-  [id]="'tsparticles'"
-  [options]="particlesOptions"
-  style="position: fixed; width: 100%; height: 100%; z-index: -1;"
-></ngx-particles>
-  <router-outlet></router-outlet>
+  style="position: fixed; width: 100vw; height: 100vh; top: 0; left: 0; z-index: -1"
+  [options]="particlesOptions">
+</ngx-particles>
+
+<!-- Your existing app content below -->
+<router-outlet></router-outlet>
