--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,5 @@
-<ngx-particles
-  style="position: fixed; width: 100vw; height: 100vh; top: 0; left: 0; z-index: -1"
-  [options]="particlesOptions">
-</ngx-particles>
+<ngx-particles [id]="'tsparticles'" [options]="particlesOptions"></ngx-particles>
 
 <!-- Your existing app content below -->
+
 <router-outlet></router-outlet>
