--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,4 @@
-<ngx-particles [id]="'tsparticles'" [options]="particlesOptions"></ngx-particles>
+<div id="tsparticlesContainer" #tsparticlesContainer style="position: fixed; width: 100%; height: 100%; z-index: -1;"></div>
 
-<!-- Your existing app content below -->
 
 <router-outlet></router-outlet>
