--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,12 @@
 .logo-image {
   width: 5em;
 }
+/* Make sure particles background fills screen behind content */
+#tsparticlesContainer canvas {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  z-index: -1;
+}
