--- a/src/app/main/home/home.html
+++ b/src/app/main/home/home.html
@@ -1,5 +1,5 @@
 
-<div class="profile-section">
+<div class="profile-section d-flex justify-content-center">
   <img src="logo.png" alt="Profile" class="profile-img" />
   <div class="profile-info">
     <h1 class="profile-name">Warda Asad</h1>
