--- a/src/app/main/navbar/navbar.html
+++ b/src/app/main/navbar/navbar.html
@@ -22,9 +22,9 @@
     </div>
     
     <div class="navbar-icons ms-auto">
-      <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://github.com/WardaAsad23" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.linkedin.com/in/warda-asad/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.hackerrank.com/profile/wardaasad23" target="_blank"><i class="fa-brands fa-hackerrank"></i></a>
     </div>
   </div>
 </nav>
