--- a/src/theme.css
+++ b/src/theme.css
@@ -101,7 +101,7 @@
   display: flex;
   justify-content: center;
   width: fit-content;
-  padding: 0.5rem 1rem;
+  padding: 0.3rem;
 }
 
 .navbar-nav {
@@ -115,8 +115,7 @@
 
 .nav-link-custom {
   color: var(--dull-white) !important;
-  font-weight: 400;
-  font-size: 1.08rem;
+  font-size: 0.6rem;
   border-radius: 30px;
   transition: color 0.2s, box-shadow 0.2s, background 0.2s;
   position: relative;
