changes related to avatar and navbar mobile responsive

--- a/src/app/main/home/home.html
+++ b/src/app/main/home/home.html
@@ -1,13 +1,14 @@
 
 <div class="profile-section d-flex justify-content-center">
-  <img src="logo.png" alt="Profile" class="profile-img" />
+  <img src="avatar-transparent.png" alt="Profile" class="profile-img" />
   <div class="profile-info">
+   
     <h1 class="profile-name">Warda Asad</h1>
     <h2 class="profile-title">
       <span class="typewriter">Full Stack Developer</span>
     </h2>
     <p class="profile-description">
-      Passionate about building scalable web applications and working with modern technologies.
+      I'm a passionate Full Stack Developer with over 2 years of experience building scalable web applications using .NET (ASP.NET Core, Web API, MVC) and Angular. I enjoy working on both the front-end and back-end, and have hands-on experience with SQL databases like SQL Server, Oracle, and MySQL. I've worked on healthcare and ride-sharing platforms, focusing on creating smooth user experiences and improving performance. I'm now looking for opportunities in the UAE where I can bring my skills in modern web development to the table. 
     </p>
   </div>
 </div>
