--- a/src/app/main/home/home.css
+++ b/src/app/main/home/home.css
@@ -6,12 +6,9 @@
 }
 
 .profile-img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
-  object-fit: cover;
-  border: 3px solid #fff;
+  width: 20em;
+  height: 20em;
+  object-fit: contain;
 }
 
 .profile-info {
@@ -31,6 +28,13 @@
   font-size: 1.2rem;
   font-weight: 400;
   margin: 0 0 1rem 0;
+}
+.profile-description
+{
+  font-size: 1rem;
+  color: #ccc;
+  margin: 0;
+  max-width: 40em;
 }
 
 .typewriter {
