--- a/src/app/main/navbar/navbar.html
+++ b/src/app/main/navbar/navbar.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg fixed-top theme-navbar pt-3" id="mainNav">
+<nav class="navbar navbar-expand-lg fixed-top pt-3" id="mainNav">
   <a class="navbar-brand logo" [routerLink]="['/home']">
     <img src="logo.png" alt="Logo" class="logo-image" />
   </a>
@@ -14,7 +14,16 @@
         <a class="nav-link nav-link-custom" [routerLink]="['/home']" routerLinkActive="active-tab">Home</a>
       </li>
       <li class="nav-item mx-2">
-        <a class="nav-link nav-link-custom" [routerLink]="['/about']" routerLinkActive="active-tab">About</a>
+        <a class="nav-link nav-link-custom" [routerLink]="['/about']" routerLinkActive="active-tab">About Me</a>
+      </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link nav-link-custom" [routerLink]="['/Education']" routerLinkActive="active-tab">Education</a>
+      </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link nav-link-custom" [routerLink]="['/projects']" routerLinkActive="active-tab">Projects</a>
+      </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link nav-link-custom" [routerLink]="['/experience']" routerLinkActive="active-tab">Experience</a>
       </li>
       <li class="nav-item mx-2">
         <a class="nav-link nav-link-custom" [routerLink]="['/contact']" routerLinkActive="active-tab">Contact</a>
