changes in imgs path

--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -21,7 +21,7 @@
             Visit Website →
           </a>
         </div>
-        <img src="/img/Al Quran/alquran.png" alt="AlQuranEdu Screenshot" class="project-img" />
+        <img src="img/Al Quran/alquran.png" alt="AlQuranEdu Screenshot" class="project-img" />
       </div>
     </section>
     <section id="section2" class="fade-section">
@@ -43,7 +43,7 @@
             Visit Website →
           </a>
         </div>
-        <img src="/img/Bablify/bablify.png" alt="Bablify Screenshot" class="project-img" />
+        <img src="img/Bablify/bablify.png" alt="Bablify Screenshot" class="project-img" />
       </div>
     </section>
     <section id="section3" class="fade-section">
@@ -65,7 +65,7 @@
             Visit Website →
           </a>
         </div>
-        <img src="/img/HMIS/hmis.png" alt="HMIS Screenshot" class="project-img" />
+        <img src="img/HMIS/hmis.png" alt="HMIS Screenshot" class="project-img" />
       </div>
     </section>
     <section id="section4" class="fade-section">Section 4 Content...</section>
