--- a/src/app/main/navbar/navbar.html
+++ b/src/app/main/navbar/navbar.html
@@ -16,15 +16,15 @@
       <li class="nav-item mx-2">
         <a class="nav-link nav-link-custom" [routerLink]="['/about']" routerLinkActive="active-tab">About Me</a>
       </li>
-      <li class="nav-item mx-2">
+      <!-- <li class="nav-item mx-2">
         <a class="nav-link nav-link-custom" [routerLink]="['/Education']" routerLinkActive="active-tab">Education</a>
-      </li>
+      </li> -->
       <li class="nav-item mx-2">
         <a class="nav-link nav-link-custom" [routerLink]="['/projects']" routerLinkActive="active-tab">Projects</a>
       </li>
-      <li class="nav-item mx-2">
+      <!-- <li class="nav-item mx-2">
         <a class="nav-link nav-link-custom" [routerLink]="['/experience']" routerLinkActive="active-tab">Experience</a>
-      </li>
+      </li> -->
       <li class="nav-item mx-2">
         <a class="nav-link nav-link-custom" [routerLink]="['/contact']" routerLinkActive="active-tab">Contact</a>
       </li>
