--- a/src/app/not-found/not-found.css
+++ b/src/app/not-found/not-found.css
@@ -2,3 +2,8 @@ p
 {
     color: #ffffff;
 }
+.not-found {
+    text-align: center;
+    margin-top: 20%;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
