addition of about myself, educaion..

--- a/src/app/education/education.html
+++ b/src/app/education/education.html
@@ -1,4 +1,8 @@
 <div class="education-wrapper">
+    <div class="module-heading text-center">
+        <h2 class="heading">Academic Journey</h2>
+        <p class="subtitle">The path that shaped my knowledge and skills</p>
+        </div>
   <p-timeline [value]="education" layout="vertical" align="alternate" class="education-timeline">
     <ng-template pTemplate="marker" let-item>
       <div class="education-marker">
