--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -1,6 +1,6 @@
 <div class="module-heading text-center">
-  <h2 class="projects-heading">Things I’ve Built</h2>
-  <p class="projects-subtitle">Turning ideas into working solutions</p>
+  <h2 class="heading">Things I’ve Built</h2>
+  <p class="subtitle">Turning ideas into working solutions</p>
 </div>
 <div class="container">
   <!-- Content Area 70% -->
